--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "xshowx",
+  "name": "iz-app",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Shao-En",
+  "license": "MIT",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
