--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "clipboard": "^2.0.11",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-openid-connect": "^2.8.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
